--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-plaid-link": "^4.1.1",
     "simplebar-react": "^3.2.5",
     "socket.io-client": "^4.8.1",
     "stylis": "^4.3.2",
