--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.562.0",
     "next": "^14.2.4",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
