--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-plaid-link": "^4.1.1",
+    "recharts": "^3.6.0",
     "simplebar-react": "^3.2.5",
     "socket.io-client": "^4.8.1",
     "stylis": "^4.3.2",
